# hlvs_webots

./: .gitignore  README.md
controllers/referee/: .gitignore  blackboard.py  display.py  field.py  game.json  game.py  game_single_bez1.json  game_single_bez2.json  game_single_bez3.json  gamestate.py  geometry.py  logger.py  logging.py  pyproject.toml  referee.py  referee_config.yaml  requirements.txt  sim_time.py  team.py  team_1.json  team_1_double.json  team_1_single_bez1.json  team_1_single_bez2.json  team_1_single_bez3.json  team_2.json  team_2_empty.json  team_2_single_bez1.json  team_2_single_bez2.json  team_2_single_bez3.json  time.py
controllers/referee/data_collection/: README.md  __init__.py  data_collector.py  match.py  step.py
controllers/referee/data_collection/match_info/: __init__.py  ball.py  camera.py  field.py  frame.py  match.py  match_object.py  player.py  pose.py  simulation.py  static.py  static_match_info.py  step.py  team.py
controllers/referee/data_collection/match_info/pytest/: test_static.py  test_step.py
controllers/referee/data_collection/pytests/: test_data_collector.py  test_static.py  test_step.py
controllers/referee/requirements/: common.txt  dev.txt
controllers/referee/teams/: NUbots.json  Utra.json  bitbots.json  invisibles.json  itandroids.json  nubots.json
controllers/referee/tests/ball_holding/multi_robot_kid/: README.md  test_scenario.json
controllers/referee/tests/game_interruptions/free_kick/scoring/goal/: test_scenario.json
controllers/referee/tests/game_interruptions/penalty_kick/scenario_1/: test_scenario.json
(+496 files in other folders)
